Fixed the unnecessary horizontal scrollbar by removing CSS 'width' parameters from html and body elements

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-html, body {
-    width: 100%;
-}
-
 /* ------------------Bendri stiliai---------------------- */
 div {
     border: 1px dashed grey;
